--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@
 	<uses-permission
 		android:name="android.permission.INSTALL_PACKAGES"
 		tools:ignore="ProtectedPermissions" />
+	<uses-feature android:name="android.hardware.camera" />
+	<uses-feature android:name="android.hardware.camera.autofocus" />
+
+	<uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- 腾讯bugly -->
+	<uses-permission android:name="android.permission.CAMERA" />
 
 
 
