--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
 		</activity>
 		<service android:name="org.eclipse.paho.android.service.MqttService" /> <!--MqttService-->
 		<service android:name=".service.CloudMqttService"/>
+		<service android:name=".service.DeliverMqttService"/>
 		<service android:name=".service.ReportRobotStateService"/>
 		<service android:name="com.amap.api.location.APSService"/>
 
