--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
     defaultConfig {
         applicationId "com.sendi.fooddeliveryrobot"
-        minSdk 21
+        minSdk 22
         targetSdkVersion 30
         versionCode 1
         versionName "1.0.0"
@@ -139,6 +139,8 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+
     // ============== mqtt ==========================
     //noinspection GradleCompatible
     implementation 'com.android.support:localbroadcastmanager:28.0.0'
