1、修改以及添加讲解途中，途径讲解以及到点讲解的业务处理 2、添加讲解途中切换到点 3、添加查询公共点的SQL 4、修改讲解结束的任务队列，以及暂停时间 5、添加上传地图的主题 6、修改mp3和百度语音以及视频声音之间的切换联动

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,7 @@
 		<service android:name="org.eclipse.paho.android.service.MqttService" /> <!--MqttService-->
 		<service android:name=".service.CloudMqttService"/>
 		<service android:name=".service.DeliverMqttService"/>
+		<service android:name=".service.MqttService"/>
 		<service android:name=".service.ReportRobotStateService"/>
 		<service android:name="com.amap.api.location.APSService"/>
 
