--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,7 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
     implementation files('lib/com.baidu.tts_2.6.2.2.20200629_44818d4.jar')
     implementation files('lib/AMap_Location_V4.7.2_20190927.jar')
+    implementation project(path: ':ScanCodeModule')
     // =============================================
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
