--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,6 +157,6 @@ dependencies {
     api 'com.jakewharton.rxbinding3:rxbinding:3.1.0' // rxjava2
     api 'com.thanosfisherman.wifiutils:wifiutils:1.6.2'
     implementation "com.qmuiteam:qmui:2.0.0-alpha10"
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
 }
