--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,8 +90,8 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    dataBinding {
-        enabled true
+    buildFeatures{
+        dataBinding = true
     }
     packagingOptions {
         exclude "META-INF/androidx.localbroadcastmanager_localbroadcastmanager.version"
@@ -159,4 +159,7 @@ dependencies {
     implementation "com.qmuiteam:qmui:2.0.0-alpha10"
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
+
+    implementation 'com.google.android.exoplayer:exoplayer:2.11.7'
+
 }
