--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,10 +42,7 @@
 
 	<uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- 腾讯bugly -->
 	<uses-permission android:name="android.permission.CAMERA" />
-
-
-
-
+	<uses-permission android:name="android.permission.USB_PERMISSION" />
 
 
 	<application
