1、修改数据库查询目标点SQL 2、修改http图片下载流程，以及数据库写入删除的方法 3、在倒计时方法中添加暂停、取消的方法 4、修改对接充电桩页面偶现不能返回主页面问题 5、讲解页面mp3不能播放、并且重复执行任务 6、云平台智能讲解管理，配置新的路线后，机器人上重复出现多余讲解点 7、选择路线的页面出现少讲解点的情况 8、添加多条讲解路线后，机器人上只能显示一条路线

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,14 +92,15 @@ android {
     }
     buildFeatures{
         dataBinding = true
+        viewBinding true
     }
     packagingOptions {
         exclude "META-INF/androidx.localbroadcastmanager_localbroadcastmanager.version"
     }
     ndkVersion '20.0.5594570'
-    buildFeatures {
-        viewBinding true
-    }
+//    buildFeatures {
+//
+//    }
 }
 repositories {
     flatDir {
