1、APP检查更新，并更新版本 2、对接上充电桩后，设置机器人位置方式更改 3、读取底盘版本，并上传底盘版本和APP版本号到云平台 4、机器人上传特定的日志/bags文件到云平台 5、讲解过程可进行暂停操作 6、优化：长讲解词的断句 7、优化：讲解词翻页的停顿

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ android {
             buildConfigField("boolean", "IS_REPORT", "true")
             buildConfigField("String", "MQTT_HOST", "\"tcp://103.215.45.135:1883\"")
             buildConfigField("String", "HTTP_HOST", "\"http://172.168.201.34:9055/management_res\"")
+            buildConfigField("String", "UPLOAD_LOG_HTTP_HOST", "\"http://172.168.201.34:9830/business/log/uploadFile\"")
             signingConfig signingConfigs.debug
             versionNameSuffix "-D"
         }
@@ -68,6 +69,7 @@ android {
             buildConfigField("boolean", "IS_REPORT", "true")
             buildConfigField("String", "MQTT_HOST", "\"tcp://103.215.44.45:1883\"")
             buildConfigField("String", "HTTP_HOST", "\"http://103.215.44.45:9891/management_res\"")
+            buildConfigField("String", "UPLOAD_LOG_HTTP_HOST", "\"http://103.215.44.45:9888/business/log/uploadFile\"")
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
@@ -160,6 +162,8 @@ dependencies {
     implementation "com.qmuiteam:qmui:2.0.0-alpha10"
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
+    //ssh包
+    implementation 'ch.ethz.ganymed:ganymed-ssh2:build210'
 
     implementation 'com.google.android.exoplayer:exoplayer:2.11.7'
 
