--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         minSdk 22
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.0.1"
         setProperty("archivesBaseName", "deliveryrobot-v" + versionCode + "(" + versionName + ")")
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -144,7 +144,7 @@ dependencies {
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
-
+    implementation 'in.xiandan:count-down-timer:1.0.3'
     // ============== mqtt ==========================
     //noinspection GradleCompatible
     implementation 'com.android.support:localbroadcastmanager:28.0.0'
