1、轻应用 2、讲解模块弹窗、急停、暂停、百度语音、MP3讲解中的业务交互优化 3、横竖切换AndroidManifest属性添加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,8 @@
 		android:theme="@style/Theme.AppCompat.Light.NoActionBar"
 		android:name=".MyApplication">
 		<activity android:name=".MainActivity"
+			android:screenOrientation="landscape"
+			android:configChanges="orientation|keyboardHidden|screenSize"
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
