--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
 		<activity android:name=".MainActivity"
 			android:screenOrientation="landscape"
 			android:configChanges="orientation|keyboardHidden|screenSize"
+			android:windowSoftInputMode="adjustResize|stateHidden"
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
