--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	package="com.sendi.deliveredrobot">
 
-	<uses-permission android:name="android.permission.SET_TIME" />
-	<uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+	<uses-permission android:name="android.permission.SET_TIME"
+		tools:ignore="ProtectedPermissions" />
+	<uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS"
+		tools:ignore="ProtectedPermissions" />
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -41,6 +43,9 @@
 		tools:ignore="ProtectedPermissions" />
 	<uses-feature android:name="android.hardware.camera" />
 	<uses-feature android:name="android.hardware.camera.autofocus" />
+	<uses-feature
+		android:name="android.hardware.telephony"
+		android:required="false" />
 
 	<uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- 腾讯bugly -->
 	<uses-permission android:name="android.permission.CAMERA" />
