1、首页唤醒 2、问答页面识别+合成+语义

--- a/aiui/src/main/assets/cfg/aiui.cfg
+++ b/aiui/src/main/assets/cfg/aiui.cfg
@@ -70,7 +70,7 @@
 	*/
 	"speech":{
 	    "data_source":"user",
-	    "interact_mode": "oneshot",
+	    "interact_mode": "continuous",
 	    "intent_engine_type": "cloud"
 	},
 
