--- a/aiui/build.gradle
+++ b/aiui/build.gradle
@@ -41,7 +41,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    api fileTree(include: ['*.jar'], dir: 'libs')
 //    implementation 'androidx.appcompat:appcompat:1.1.0'
 //    implementation 'com.google.android.material:material:1.1.0'
 //    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
