--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         minSdk 26
         targetSdkVersion 30
         versionCode 1
-        versionName "1.1.1"
-        setProperty("archivesBaseName", "deliveryrobot-v" + versionCode + "(" + versionName + ")")
+        versionName "1.2.0_aiui"
+        setProperty("archivesBaseName", "deliveryrobot-v" + versionCode + "-" + versionName)
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
