唤醒词替换成小迪小迪

--- a/aiui/src/main/assets/cfg/aiui.cfg
+++ b/aiui/src/main/assets/cfg/aiui.cfg
@@ -2,10 +2,10 @@
 {
     /*鉴权参数，请填写aiui官网的appid和key。*/
     "login":{
-        "appid": "e4cddea8",
-#         "appid": "7877036a",
-        "key": "3574253046f936c3594c4baf7a8f5356"
-#         "key": "075966bd9b33db50eeb6c986d8cacd2c"
+#       "appid": "e4cddea8",
+        "appid": "7877036a",
+#       "key": "3574253046f936c3594c4baf7a8f5356"
+        "key": "075966bd9b33db50eeb6c986d8cacd2c"
     },
 
 	/* interact_timeout：唤醒之后，一段时间内不说话则进入待唤醒状态，取值：[10000,180000)ms，默认为60000ms。仅continuous模式生效
@@ -18,8 +18,8 @@
 	/*scene：用户定制的场景参数，不同的场景可对应不同的云端处理流程。
 	  clean_dialog_history：auto(自动清除历史,默认) user(开发者手动清除历史)*/
 	"global":{
-		"scene":"main_box",
-# 		"scene":"main",
+# 		"scene":"main_box",
+ 		"scene":"main",
 		"clean_dialog_history":"auto"
 	},
 
