--- a/aiui/src/main/assets/cfg/vtn-4mic-ZBS.ini
+++ b/aiui/src/main/assets/cfg/vtn-4mic-ZBS.ini
@@ -1,6 +1,7 @@
 
 [auth]
-appid=e4cddea8
+#appid=e4cddea8
+appid=7877036a
 
 
 [cae]
@@ -42,5 +43,6 @@ debug_dir = ./log/
 ivw_enable = 1
 
 #唤醒资源
-res_path = /sdcard/vtn/xiaofeixiaofei-V317-Deep.bin
+#res_path = /sdcard/vtn/xiaofeixiaofei-V317-Deep.bin
+res_path =/sdcard/Android/data/com.iflytek.vtncaetest/xiaodixiaodi.bin
 
