--- a/aiui/src/main/assets/cfg/vtn-4mic.ini
+++ b/aiui/src/main/assets/cfg/vtn-4mic.ini
@@ -1,6 +1,7 @@
 [auth]
 #应用授权id， e4cddea8为测试appid,正式使用请切换为用户自己的appid
-appid=e4cddea8
+#appid=e4cddea8
+appid=7877036a
 
 [cae]
 #降噪功能开关, 1(开启) ,0(关闭),假设唤醒sdk算力为100%,降噪占40%
@@ -54,7 +55,8 @@ remote_free_ivw  = 0
 
 #支持多唤醒词bin文件，如有深度定制唤醒词必须放第一个，bin文件用逗号分割，示例：res_path= ./deep.bin,./1.bin,./2.bin
 #xiaofeixiaofei-V317-Deep.bin  免费深度训练唤醒词：小飞小飞
-res_path =/sdcard/Android/data/com.iflytek.vtncaetest/xiaofeixiaofei-V317-Deep.bin
+#res_path =/sdcard/Android/data/com.iflytek.vtncaetest/xiaofeixiaofei-V317-Deep.bin
+res_path =/sdcard/Android/data/com.iflytek.vtncaetest/xiaodixiaodi.bin
 #保存唤醒音频，1(打开),0(关闭，默认), 只有定制唤醒模型优化才需要保存音频发给讯飞
 output_wakeup_audio = 0
 #保存唤醒音频的路径，必须是已存在的路径,且程序对目录有可写权限
