--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,8 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- 腾讯bugly -->
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.USB_PERMISSION" />
+	<uses-permission android:name="android.permission.CALL_PHONE"
+		tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
 
 
 	<application
