--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 26
         targetSdkVersion 30
         versionCode 1
-        versionName "1.3.0_aiui_call_phone"
+        versionName "1.3.1_aiui_aixiaoyue"
         setProperty("archivesBaseName", "deliveryrobot-v" + versionCode + "-" + versionName)
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
