问答模型优先级逻辑

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,7 +154,7 @@ dependencies {
     //ssh包
     implementation 'ch.ethz.ganymed:ganymed-ssh2:build210'
 
-    implementation project(path: ':conversation')
+//    implementation project(path: ':conversation')
 //    implementation("") {
 //        exclude(group="com.alibaba" ,module = "fastjson")
 //    }
