修改aiui.cfg里的参数为普通话+粤语的scene

--- a/aiui/src/main/assets/cfg/aiui.cfg
+++ b/aiui/src/main/assets/cfg/aiui.cfg
@@ -19,7 +19,8 @@
 	  clean_dialog_history：auto(自动清除历史,默认) user(开发者手动清除历史)*/
 	"global":{
 # 		"scene":"main_box",
- 		"scene":"main",
+# 		"scene":"main",
+ 		"scene":"hd-mix",
 		"clean_dialog_history":"auto"
 	},
 
@@ -30,7 +31,7 @@
                   svad：云端vad开关,1(开启),0(关闭)
     */
     "attachparams":{
-         "iat_params":"{\"svad\":\"1\"}"
+         "iat_params":"{\"svad\":\"1\",\"opt\":\"2\"}"
     },
 
 	/* vad_enable：vad功能, 1（开启，默认）,0（关闭）
