替换唤醒词为小越小越

--- a/aiui/src/main/assets/cfg/vtn-4mic-ZBS.ini
+++ b/aiui/src/main/assets/cfg/vtn-4mic-ZBS.ini
@@ -44,5 +44,6 @@ ivw_enable = 1
 
 #唤醒资源
 #res_path = /sdcard/vtn/xiaofeixiaofei-V317-Deep.bin
-res_path =/sdcard/Android/data/com.iflytek.vtncaetest/xiaodixiaodi.bin
+#res_path =/sdcard/Android/data/com.iflytek.vtncaetest/xiaodixiaodi.bin
+res_path =/sdcard/Android/data/com.iflytek.vtncaetest/xiaoyuexiaoyue.bin
 
