--- a/aiui/src/main/assets/cfg/vtn-8mic.ini
+++ b/aiui/src/main/assets/cfg/vtn-8mic.ini
@@ -32,4 +32,5 @@ ivw_enable = 1
 #支持多唤醒词bin文件，如有深度定制唤醒词必须放第一个，bin文件用逗号分割，示例：res_path= ./deep.bin,./1.bin,./2.bin
 #xiaofeixiaofei-V317-Deep.bin  免费深度训练唤醒词：小飞小飞
 #res_path =/sdcard/Android/data/com.iflytek.vtncaetest/xiaofeixiaofei-V317-Deep.bin
-res_path =/sdcard/Android/data/com.iflytek.vtncaetest/xiaodixiaodi.bin
+#res_path =/sdcard/Android/data/com.iflytek.vtncaetest/xiaodixiaodi.bin
+res_path =/sdcard/Android/data/com.iflytek.vtncaetest/xiaoyuexiaoyue.bin
