--- a/aiui/build.gradle
+++ b/aiui/build.gradle
@@ -42,6 +42,8 @@ android {
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/AlsaRecorder.jar')
+    implementation files('libs/cae.jar')
 //    implementation 'androidx.appcompat:appcompat:1.1.0'
 //    implementation 'com.google.android.material:material:1.1.0'
 //    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
