--- a/aiui/src/main/assets/cfg/aiui_phone.cfg
+++ b/aiui/src/main/assets/cfg/aiui_phone.cfg
@@ -11,7 +11,8 @@
     "global": {
         "scene": "hd-mix-xinghuo"
     },
-
+    // 开启语种信息返回
+    "attachparams":{"iat_params":"{\"opt\":\"2\"}"},
 	/* 交互参数 */
 	"interact":{
         // 交互超时关闭
