智能引领选点页面修改ui为有图现实图，没图显示字；修改aiui_phone配置为在6.6.x下可以读取语种信息

--- a/aiui/src/main/assets/cfg/aiui_phone.cfg
+++ b/aiui/src/main/assets/cfg/aiui_phone.cfg
@@ -12,7 +12,12 @@
         "scene": "hd-mix-xinghuo"
     },
     // 开启语种信息返回
-    "attachparams":{"iat_params":"{\"opt\":\"2\"}"},
+    "attachparams": {
+    // 识别额外参数
+      "iat_params": {
+        "opt" :"2"
+      }
+    },
 	/* 交互参数 */
 	"interact":{
         // 交互超时关闭
