更多服务-富文本类型：图片和视频不需要加载，直接显示

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -168,4 +168,6 @@ dependencies {
         exclude group: 'com.squareup.okio'
         exclude group: 'org.jetbrains.kotlin'
     }
+    //cache web view 原生的缓存机制不生效，只好搞个三方的用用
+//    implementation 'ren.yale.android:cachewebviewlib:2.2.1'
 }
